// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quieting menu CancelMenuItem can be created 1`] = `
<div>
  <li
    class=""
    role="none"
  >
    <a
      class="bp4-menu-item bp4-disabled"
      data-cy="quiet-cancel"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="bp4-fill bp4-text-overflow-ellipsis"
      >
        Cancel quiet period
      </div>
    </a>
  </li>
</div>
`;

exports[`quieting menu QuiteMenuItem can be created 1`] = `
<div>
  <li
    class="bp4-submenu"
    role="none"
  >
    <span
      aria-haspopup="true"
      class="bp4-popover2-target"
      role="menuitem"
      tabindex="0"
    >
      <a
        class="bp4-menu-item"
        data-cy="quiet-without-comment"
        role="none"
        tabindex="-1"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Quiet for...
        </div>
        <span
          aria-hidden="true"
          class="bp4-icon bp4-icon-caret-right bp4-submenu-icon"
          icon="caret-right"
        >
          <svg
            data-icon="caret-right"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </a>
    </span>
  </li>
</div>
`;

exports[`quieting menu QuiteWithCommentDialog can be created 1`] = `
<div>
  <div>
    <div
      class="form"
    >
      <h6
        class="bp4-heading form__header"
      >
        <div>
          Quiet
        </div>
      </h6>
      <div
        class="form__panel-selector"
      />
      <div
        class="form-content"
      >
        <div
          class="form-label"
        >
          Station:
        </div>
        <div
          class="form-value form-value--uneditable"
          title=""
        />
        <div
          class="form-label"
        >
          Channel:
        </div>
        <div
          class="form-value form-value--uneditable"
          title="name"
        >
          name
        </div>
        <div
          class="form-label"
        >
          Monitor:
        </div>
        <div
          class="form-value form-value--uneditable"
          title="MISSING"
        >
          Missing
        </div>
        <div
          class="form-label"
        >
          Quiet for:
        </div>
        <div
          class="form-value"
        >
          <div
            class="dropdown-container"
          >
            <span
              class="dropdown-selector"
              data-cy="-dropdown"
            >
              <div
                class="bp4-html-select"
              >
                <select
                  title="Select the duration to quiet"
                >
                  <option
                    value="300000"
                  >
                    5 minutes
                  </option>
                  <option
                    value="900000"
                  >
                    15 minutes
                  </option>
                  <option
                    value="3600000"
                  >
                    1 hour
                  </option>
                  <option
                    value="86400000"
                  >
                    1 day
                  </option>
                  <option
                    value="604800000"
                  >
                    7 days
                  </option>
                </select>
                <span
                  class="bp4-icon bp4-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    aria-labelledby="iconTitle-0"
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-0"
                    >
                      Open dropdown
                    </title>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </div>
        </div>
        <div
          class="form-label"
        >
          Comment:
        </div>
        <div
          class="form-value"
        >
          <div>
            <textarea
              class="form__text-input"
              data-cy="quiet-comment-textarea"
              maxlength="1024"
              rows="4"
              title="Enter the comment"
            />
            <p
              class="form__character-count"
            >
              Characters remaining: 
              1024
            </p>
          </div>
        </div>
      </div>
      <div
        class="form__buttons"
      >
        <div
          class="form__buttons--right"
        >
          <button
            class="bp4-button bp4-disabled form__button"
            data-cy="submit-quiet"
            disabled=""
            tabindex="-1"
            title="Must modify a field to save"
            type="button"
          >
            <span
              class="bp4-button-text"
            >
              Quiet
            </span>
          </button>
          <button
            class="bp4-button form__button"
            data-cy="cancel-quiet"
            type="button"
          >
            <span
              class="bp4-button-text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`quieting menu QuiteWithCommentMenuItem can be created 1`] = `
<div>
  <li
    class=""
    role="none"
  >
    <a
      class="bp4-menu-item bp4-popover2-dismiss"
      data-cy="quiet-with-comment"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="bp4-fill bp4-text-overflow-ellipsis"
      >
        Quiet with comment...
      </div>
    </a>
  </li>
</div>
`;
